Reorganize Pom Files
- Create better heirarchy
- Move plugin configuration to commons
- Use pluginManagement in parent instead of plugins
- Move integrationtest profile to parent pom
- Move ovsdb bundle versions to parent pom
- Enable integration tests for ovsdb plugin
- Add common dependencies to commons pom.xml

Change-Id: If5a5a668c17a9d4146bfdd3e7ab4b33938aaefb5
Signed-off-by: Dave Tucker <djt@redhat.com>